--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -644,6 +644,30 @@ article blockquote {
   gap: 1rem;
 }
 
+.subscribe-form {
+  margin: 2rem 0;
+}
+
+.subscribe-form input[type="text"] {
+  height: 40px;
+  border: 1px solid var(--border-light);
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 16px;
+}
+
+.subscribe-form input[type="submit"] {
+  height: 40px;
+  border: 1px solid var(--border-light);
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 16px;
+}
+
+.subscribe-promise {
+  font-size: 18px;
+}
+
 /* Spacing */
 
 .mt-1 { margin-top: 1rem !important; }
@@ -745,4 +769,13 @@ article blockquote {
   .side {
     color: var(--post-text-dark);
   }
+  
+  .subscribe-form input[type="text"] {
+    border: 1px solid var(--border-dark);
+  }
+
+  .subscribe-form input[type="submit"] {
+    border: 1px solid var(--border-dark);
+  }
+
 }
