--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -662,6 +662,7 @@ article blockquote {
   padding-left: 15px;
   padding-right: 15px;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .subscribe-promise {
