--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
     <figure class="cover-image">
       <img
         src="{{ index . 0 | absURL }}"
-        alt="Post cover image for {{ .Title }}"
+        alt="Cover image for {{ .Title }}"
         loading="lazy">
     </figure>
     {{ end }}
