--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -5,7 +5,7 @@
       <figure class="cover-image">
         <img
           src="{{ index . 0 | absURL }}"
-          alt="Post cover image"
+          alt="Cover image"
           loading="lazy">
       </figure>
     {{ end -}}
