--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,7 +10,7 @@
       {{- if and .Title (ne .Title .Site.Title) }}
       - {{ .Title }}
       {{ else }}
-        {{ .Date.Format "Jan 2, 2006" }}
+      - {{ .Date.Format "Jan 2, 2006" }}
       {{- end -}}
       {{ if .IsHome }}
       - Adventures in Web, Life and Travelling To Places Near And Far
