--- a/layouts/partials/featured-post-item.html
+++ b/layouts/partials/featured-post-item.html
@@ -1,4 +1,4 @@
-<article class="featured-post">
+<article class="featured">
   {{ if .Title }}
   <a class="cover-link" href="{{ .Permalink }}">
     {{- with $.Params.images -}}
