--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
         <div class="side">
           {{ partial "bio.html" . }}
           {{ partial "sidenav.html" . }}
+          {{ partial "subscribe-block.html" . }}
         </div>
       </div>
     </div>
