--- a/layouts/partials/subscribe-block.html
+++ b/layouts/partials/subscribe-block.html
@@ -1,5 +1,5 @@
 <div class="side-subscribe-block">
-  <p>Subscribe to the email newsletter for this blog. Subscribers get new posts via email right they've gone live here on blog. I hope you’ll subscribe:</p>
+  <p>Subscribe to the email newsletter for this blog. Newsletter goes out right after new long-form post has gone live here on blog. I hope you’ll subscribe:</p>
 
   <form class="subscribe-form" method="POST" action="https://micro.blog/users/subscribe/65934">
     <input type="text" name="email" size="30" placeholder="Your email address" />
