--- a/layouts/partials/sidenav.html
+++ b/layouts/partials/sidenav.html
@@ -8,7 +8,7 @@
   <li>
     <a href="/archive">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="rgba(255, 255, 255, 0.80)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-archive"><polyline points="21 8 21 21 3 21 3 8"/><rect x="1" y="3" width="22" height="5"/><line x1="10" y1="12" x2="14" y2="12"/></svg>
-      Archives
+      Archive
     </a>
   </li>
   <li>
