--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
         </div>
       </div>
     </div>
+    <footer>© {{ now.Year }} <a href="https://juhaliikala.com" rel="me">Juha Liikala</a>.</footer>
     {{ range .Site.Params.plugins_js }}
 			<script src="{{ . }}"></script>
 		{{ end }}
